--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.13.1"
   },
   "devDependencies": {
+    "greenkeeper-postpublish": "^1.0.0",
     "semantic-release": "^4.3.5",
     "standard": "^7.1.1"
   },
@@ -24,6 +25,7 @@
   },
   "scripts": {
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "test": "standard"
+    "test": "standard",
+    "postpublish": "greenkeeper-postpublish"
   }
 }
